# nes-emulator-rust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yaml  rom-database.xlsx  vram.xlsm  vram.xlsx
.github/workflows/: build.yml
benches/: benchmarks.rs
config/: log4rs.yaml
emulator/: Cargo.toml
emulator/benches/: benchmarks.rs
emulator/src/: lib.rs
emulator/src/apu/: dmc_channel.rs  envelope.rs  mixer.rs  mod.rs  noise_channel.rs  pulse_channel.rs  triangle_channel.rs
emulator/src/cartridge/: mirroring.rs  mod.rs
emulator/src/cartridge/mappers/: axrom.rs  bxrom.rs  cnrom.rs  color_dreams.rs  gxrom.rs  mapper_071.rs  mmc1.rs  mmc2.rs  mmc3.rs  mod.rs  nina_003_006.rs  uxrom.rs
emulator/src/cpu/: interrupts.rs  mod.rs  opcodes.rs
emulator/src/io/: mod.rs
emulator/src/ppu/: mod.rs  palette.rs  sprites.rs
emulator/src/ppu/registers/: mod.rs  ppumask.rs
emulator/tests/: test_roms.rs
romdb/: Cargo.toml
romdb/src/: main.rs
roms/test/: SNDTEST2.NES
sdl2_frontend/: Cargo.toml
sdl2_frontend/src/: main.rs  sdl2_app.rs
src/: lib.rs  main.rs  sdl2_app.rs
src/apu/: dmc_channel.rs  length_counter.rs  mod.rs  noise_channel.rs  pulse_channel.rs  triangle_channel.rs
src/cartridge/: mirroring.rs  mod.rs
src/cartridge/mappers/: axrom.rs  cnrom.rs  color_dreams.rs  gxrom.rs  mapper_zero.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mod.rs  nrom.rs  uxrom.rs
src/cpu/: interrupts.rs  mod.rs  opcodes.rs  registers.rs  status_flags.rs
src/io/: mod.rs
src/mmu/: mod.rs
src/ppu/: mod.rs  palette.rs  sprites.rs
src/ppu/registers/: ppuctrl.rs  ppumask.rs  ppustatus.rs
tests/: test_roms.rs
