[package]
name = "rust_nes"
version = "0.0.1"
authors = ["David Tyler <davet.code@gmail.com>"]
repository = "https://github.com/DaveTCode/nes-emulator-rust.git"
license = "MIT"
publish = false

[dependencies]
bitflags = "1.2.1"
clap = "3.0.0-beta.2"
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
log = "0.4.11"
log4rs = "1.0.0-alpha-2"