[package]
name = "rust_nes"
version = "0.0.1"
authors = ["David Tyler <davet.code@gmail.com>"]
repository = "https://github.com/DaveTCode/nes-emulator-rust.git"
license = "MIT"
publish = false

[dependencies]
bitflags = "2.1.0"
log = "0.4.17"
log4rs = "1.2.0"
zip = "0.6.4"

[dev-dependencies]
crc32fast = "1.3.2"
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "rust_nes"
path = "src/lib.rs"