[package]
name = "nes_rom_db"
version = "0.0.1"
authors = ["David Tyler <davet.code@gmail.com>"]
repository = "https://github.com/DaveTCode/nes-emulator-rust.git"
license = "MIT"
publish = false

[dependencies]
clap = "4.0.28"
csv = "1.1.6"
rust_nes = { path = "../emulator" }
serde = { version = "1.0.148", features = ["derive"] }

[[bin]]
name = "nes-rom-db"
path = "src/main.rs"