[package]
name = "nes_rom_db"
version = "0.0.1"
authors = ["David Tyler <davet.code@gmail.com>"]
repository = "https://github.com/DaveTCode/nes-emulator-rust.git"
license = "MIT"
publish = false

[dependencies]
clap = "4.1.6"
csv = "1.2.0"
rust_nes = { path = "../emulator" }
serde = { version = "1.0.151", features = ["derive"] }

[[bin]]
name = "nes-rom-db"
path = "src/main.rs"