[package]
name = "sdl2_frontend"
version = "0.1.0"
authors = ["David Tyler <david.tyler@metaswitch.com>"]
default-run = "nes-emulator"

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
crc32fast = "1.3.2"
log = "0.4.17"
log4rs = "1.1.1"
rust_nes = { path = "../emulator" }
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }

[[bin]]
name = "nes-emulator"
path = "src/main.rs"